apps/simple-cookbook/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-cookbook
  namespace: simple-cookbook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-cookbook
  template:
    metadata:
      labels:
        app: simple-cookbook
    spec:
      containers:
        - name: web
          image: code.alucard.dev/spencerrung/simple-cookbook:latest # {"$imagepolicy": "flux-system:simple-cookbook"}
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
