apps/simple-cookbook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-cookbook
  namespace: simple-cookbook
spec:
  type: ClusterIP
  selector:
    app: simple-cookbook
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
